          (above or below the seekbar)
 NEW    : Ticket #1377, Keep the same playback speed for all the items of the playlist
 NEW    : Ticket #1382, Added an OSD message when taking a screenshot
 NEW    : Ticket #1487, Show the saved position for files favorited with
          "remember position" enabled in the "Organize Favorites" dialog
 CHANGED: The filters' settings are now saved in
          [HKCU\Software\Gabest\Media Player Classic\Filters]
 CHANGED: Improved the OSD message when changing the playback speed
 CHANGED: The hand cursor is not used anymore for the video frame unless the
          mouse pointer hovers a button in a DVD menu.
 CHANGED: Ticket #519, Replace the "Next (Previous) Playlist Item" command by a
          "Next (Previous) File" command which can also be used to play the next
          (previous) file in folder without stopping at chapters.
 CHANGED: Ticket #559, Replace jump forward and backward buttons in Windows 7 taskbar
          by next and previous buttons as they are probably used more often.
 CHANGED: Ticket #846, Use a different program id for x64 builds so that there
          is no conflict over file associations between x86 and x64 builds.
 CHANGED: Updated libpng to v1.5.4
 CHANGED: Updated MediaInfoLib to v0.7.47
 CHANGED: Updated ZenLib to v0.4.20
 CHANGED: Updated SoundTouch to v1.5.1pre r104
 CHANGED: Updated Little CMS to v2.2
 CHANGED: Updated libdca to SVN r90
 CHANGED: Updated German, Ukrainian, Turkish, Russian, Hungarian translation
 FIXED  : Ticket #20, [MKV] 2 or more video streams get played back simultaneously
          on top of each other
 FIXED  : Ticket #71, [MPEG] LPCM mono causes 50% playback speed
 FIXED  : Ticket #199, [MpegSplitter] no video with some files
 FIXED  : Ticket #285, Ambarella AVC not correctly splitted by MPC-HC's internal
          MP4/MOV source filter
 FIXED  : Ticket #384, disable Relative drive
 FIXED  : Ticket #613, Bugs of MPC-HC Dialog Fonts